fixed options scrollbar and checkboxes visibility

--- a/dvtDashboard/mainApp/static/css/map-style.css
+++ b/dvtDashboard/mainApp/static/css/map-style.css
@@ -26,7 +26,7 @@
 #map-options {
     height: max-content;
     overflow-wrap: normal;
-    overflow-y: scroll;
+    overflow-y: auto;
 }
 
 #map-aggregation-vis {
